--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-node@v3.5.1
         with:
           node-version: "21.2.0"
+      - name: Move to gible directory
+        run: cd gible
       - name: Install dependencies
         run: npm install
       - name: Try build
